// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialIcon component should apply values from theme 1`] = `
<View
  replaceTheme={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#3b5998",
      "borderRadius": 30,
      "flexDirection": "row",
      "height": 52,
      "justifyContent": "center",
      "margin": 7,
      "shadowColor": "rgba(0,0,0, .4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 52,
    }
  }
  theme={
    Object {
      "SocialIcon": Object {
        "type": "facebook",
      },
      "colors": Object {
        "disabled": "hsl(208, 8%, 90%)",
        "divider": "#bcbbc1",
        "error": "#ff190c",
        "grey0": "#393e42",
        "grey1": "#43484d",
        "grey2": "#5e6977",
        "grey3": "#86939e",
        "grey4": "#bdc6cf",
        "grey5": "#e1e8ee",
        "greyOutline": "#bbb",
        "platform": Object {
          "android": Object {
            "error": "#f44336",
            "primary": "#2196f3",
            "secondary": "#9C27B0",
            "success": "#4caf50",
            "warning": "#ffeb3b",
          },
          "ios": Object {
            "error": "#ff3b30",
            "primary": "#007aff",
            "secondary": "#5856d6",
            "success": "#4cd964",
            "warning": "#ffcc00",
          },
        },
        "primary": "#2089dc",
        "searchBg": "#303337",
        "secondary": "#8F0CE8",
        "success": "#52c41a",
        "warning": "#faad14",
      },
    }
  }
  underlayColor="#3b5998"
  updateTheme={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 24,
          },
          Object {},
          Object {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`SocialIcon component should render light social icon 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "borderRadius": 30,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 7,
    }
  }
  underlayColor="white"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="#02b875"
      name="medium"
      size={24}
      style={Object {}}
    />
  </View>
</View>
`;

exports[`SocialIcon component should render social icon button 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#3b5998",
      "borderRadius": 30,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 7,
      "paddingBottom": 14,
      "paddingTop": 14,
      "shadowColor": "rgba(0,0,0, .4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
  underlayColor="#3b5998"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="white"
      name="facebook"
      size={24}
      style={Object {}}
    />
    <Themed.Text
      style={
        Object {
          "color": "white",
          "fontWeight": "bold",
          "marginLeft": 15,
        }
      }
    >
      Sign In With Facebook
    </Themed.Text>
  </View>
</View>
`;

exports[`SocialIcon component should render without issues 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#00aced",
      "borderRadius": 30,
      "flexDirection": "row",
      "height": 52,
      "justifyContent": "center",
      "margin": 7,
      "shadowColor": "rgba(0,0,0, .4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 52,
    }
  }
  underlayColor="#00aced"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="white"
      name="twitter"
      size={24}
      style={Object {}}
    />
  </View>
</View>
`;
